# jr-finance-peso-dolar

./: .dockerignore  .env.example  .gitignore  .python-version  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
apps/finance/: CLAUDE.md  admin.py  apps.py  exceptions.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/finance/management/commands/: run_bot.py
apps/finance/migrations/: 0001_initial.py  0002_userprofile_usd_to_cop_rate.py  0003_transaction_type_transfer.py  0004_add_claude_created_via.py
apps/finance/templates/admin/: finance_index.html
apps/finance/templates/admin/finance/account/: change_list.html
config/: urls.py
config/settings/: base.py  local.py  production.py
docs/: claude-ai-project-instructions.md  openapi.yaml
mcp/: Dockerfile  fly.toml  requirements.txt  server.py
utils/channels/: base.py
utils/channels/telegram/: channel.py  db.py  keyboards.py
utils/channels/telegram/handlers/: conversation.py
utils/exceptions/: base_exceptions.py  codes.py
utils/models/: base_model.py
utils/selectors/: base_selector.py
utils/services/: base_service.py
