[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jr-finance-peso-dolar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.15",
    "djangorestframework-api-key>=3.0",
    "python-decouple>=3.8",
    "gunicorn>=22.0",
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "utils*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
